--- a/bio.html
+++ b/bio.html
@@ -5,19 +5,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="menu-placeholder"></div>
-  <div class="content">
-    <p>Florence Paradis Leduc (b. 1995, Montreal) is a ceramic artist whose work explores the intersection of natural forms and human intervention. Working primarily in stoneware and mixed media, she creates sculptural pieces that investigate themes of growth, decay, and transformation.</p>
-
-    <p>Based in Montreal, Leduc received her MFA in Ceramics from [University] in 2023. Her work has been exhibited in various galleries across Canada, including solo shows in Montreal and Toronto. She is currently an artist-in-residence at [Studio], where she continues to develop her practice.</p>
+  <a href="/index.html" class="logo-container" id="logo-container"></a>
+  <div class="sidebar">
+    <div id="menu-placeholder"></div>
   </div>
-
-  <script>
-    fetch('menu.html')
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById('menu-placeholder').innerHTML = data;
-      });
-  </script>
+  <div class="main-content">
+    <div class="content">
+      <p>Florence Paradis Leduc (b. 1995, Montreal) is a ceramic artist whose work explores the intersection of natural forms and human intervention. Working primarily in stoneware and mixed media, she creates sculptural pieces that investigate themes of growth, decay, and transformation.</p>
+      <p>Based in Montreal, Leduc received her MFA in Ceramics from [University] in 2023. Her work has been exhibited in various galleries across Canada, including solo shows in Montreal and Toronto. She is currently an artist-in-residence at [Studio], where she continues to develop her practice.</p>
+    </div>
+  </div>
+  <script src="alternating_logo.js"></script>
 </body>
 </html>
